Initial implementation with ESM and cjs
